--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,10 @@
 # .gitattributes
 # Map file extensions to git filters
 
-rcs-keywords.* filter=none
 *.h filter=rcs-keywords
 *.c filter=rcs-keywords
 *.cc filter=rcs-keywords
 *.m filter=rcs-keywords
 *.mm filter=rcs-keywords
+# Or simply:
+* filter=rcs-keywords
